--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-to-image": "^1.11.11",
     "instagram-url-direct": "^1.0.20",
     "next": "14.2.15",
+    "puppeteer": "^24.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
