--- a/package.json
+++ b/package.json
@@ -16,23 +16,26 @@
     "@emotion/styled": "^11.13.0",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "@sparticuz/chromium": "^138.0.2",
     "btch-downloader": "^2.3.2",
     "cloudinary": "^2.5.1",
     "framer-motion": "^11.11.8",
     "html-to-image": "^1.11.11",
     "instagram-url-direct": "^1.0.20",
     "next": "14.2.15",
-    "puppeteer": "^24.17.1",
+    "puppeteer-core": "^24.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/puppeteer": "^5.4.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "puppeteer": "^24.17.1",
     "typescript": "^5"
   }
 }
