--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "@google/genai": "^1.21.0",
     "btch-downloader": "^2.3.2",
     "cloudinary": "^2.5.1",
     "framer-motion": "^11.11.8",
